public/css/user/proj.css
.bold{
	font-weight: bolder;
}

.text{
	font-size: 25px; 
	font-weight: bolder;
}
.colors{
	color: #2d5d14;
}
.text-ligther{
	font-size: 25px; 
	font-weight:lighter
}
.custom-thead {
	height: 60px; /* Adjust the height as needed */
	padding: 20px;
}
.custom-modal {
    width: 100%; 
    height: 1500px; 
}
/* Table */
.styled-table {
    border-collapse: collapse;
    margin: 25px 0;
    font-size: 0.9em;
    font-family: sans-serif;
    min-width: 400px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
	border-radius: 50px;
	overflow: hidden; /* Add this line */
}
/* header */
.styled-table thead tr {
    background-color: rgb(255, 154, 89);
    color: #ffffff;
    text-align: left;
}
.styled-table th,
.styled-table td {
    padding: 12px 15px;
}
.styled-table tbody tr {
    border-bottom: 1px solid #dddddd;
}

.styled-table tbody tr:nth-of-type(even) {
    background-color: #f3f3f3;
}

.styled-table tbody tr:last-of-type {
    border-bottom: 2px solid rgb(255, 96, 0);
}
.styled-table tbody tr.active-row {
    font-weight: bold;
    color: rgb(255, 96, 0);
}

/* borrow btn */
.br-btn{
	font-weight: bold;
	font-size: 15px;
	background-color: #009879;
	border: 2px solid black;
	box-shadow: 0 0 0 rgba(0, 0, 0, 0.3), 5px 5px 0 rgba(0, 0, 0, 0.3),
		-5px 5px 10px rgba(0, 0, 0, 0.3);
	border-radius: 20px;
	/* Rounded corners */
	padding: 15px 15px;
	cursor: pointer;
}
.br-btn:hover {
    background-color:#2d5d14; 
	color: #ffffff;
}
				
/* =============================== */
.pallete-colors {
	background-color: rgb(255, 96, 0);
	background-color: rgb(255, 230, 199);
	background-color: rgb(255, 154, 89);
	background-color: rgb(69, 69, 69);
}
/* List Page */

.container-wrapper {
	align-items: center;
	justify-content: center;
	
}
.rounded-container {
	position: absolute;
	top: 80%;
	left: 50%;
	transform: translate(-50%,-50%);
	border-radius: 20px;
	/* Rounded corners for the container */
	background-color: rgb(255, 230, 199);
	/* Background color for the container */
	padding: 20px;
	margin: 20px;
	border: 2px solid black;
	height:700px;
	width: 300px;
	box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.3), 5px 5px 0px rgba(0, 0, 0, 0.3), -5px 5px 10px rgba(0, 0, 0, 0.3);
}
.heading{
	font-weight: bolder;
	color:rgb(255, 230, 199);
	padding-left: 100px;
}
.h-profile{
	font-weight: bolder;
	color:rgb(255, 230, 199);
	padding-left: 180px;
}
/* Rounded heading styles */
.rounded-heading,
.rounded-2heading,
.rounded-3heading,
.rounded-4heading,
.rounded-5heading,
.rounded-6heading {
	font-weight: bolder;
	border-radius: 18px;
	padding: 10px 20px;
	position: fixed;
	text-align: center;	
	border: 2px solid black;
	box-shadow: 0 0 0 rgba(0, 0, 0, 0.3), 5px 5px 0 rgba(0, 0, 0, 0.3),
		-5px 5px 10px rgba(0, 0, 0, 0.3);
}

.rounded-heading {
	background-color: rgb(255, 154, 89);
}

.rounded-2heading {
	background-color: white;
	margin-top: 100px;
	margin-left: 50px;
}

.rounded-3heading {
	background-color: white;
	margin-top: 200px;
	margin-left: 50px;
}

.rounded-4heading {
	background-color: white;
	margin-top: 300px;
	margin-left: 50px;
}

.rounded-5heading {
	background-color: white;
	margin-top: 400px;
	margin-left: 50px;
}

.rounded-6heading {
	background-color: white;
	margin-top: 500px;
	margin-left: 50px;
}

.custom-swal {
    width: 80%; 
    height: 900px; 
}

/* Rounded status styles */
.status,
.status2,
.status3,
.status4,
.status5 {
	font-weight: bolder;
	border-radius: 18px;
	padding: 10px 20px;
	position: fixed;
	text-align: center;	
	border: 2px solid black;
	box-shadow: 0 0 0 rgba(0, 0, 0, 0.3), 5px 5px 0 rgba(0, 0, 0, 0.3),
		-5px 5px 10px rgba(0, 0, 0, 0.3);
}


.status2 {
	background-color: rgb(156, 204, 118);
	margin-top: 110px;
	margin-left: 50px;
}

.status3 {
	background-color: rgb(255, 154, 89);
	margin-top: 210px;
	margin-left: 50px;
}

.status4 {
	background-color: rgb(156, 204, 118);
	margin-top: 310px;
	margin-left: 50px;
}

.status5 {
	background-color: rgb(255, 89, 89);
	margin-top: 410px;
	margin-left: 50px;
}

#green-button,
#warning-button,
#green2-button,
#problems-button{
    position: absolute;
	font-weight: bold;
	font-size: 25px;
	color: black;
	/* Text color */
	border: 3px solid black;
	box-shadow: 0 0 0 rgba(0, 0, 0, 0.3), 5px 5px 0 rgba(0, 0, 0, 0.3),
		-5px 5px 10px rgba(0, 0, 0, 0.3);
	border-radius: 25px;
	/* Rounded corners */
	padding: 10px 20px;
	cursor: pointer;
	margin-left: 100px;
	
}
#green-button{
	background-color: rgb(156, 204, 118);
	margin-top: 100px;
}
#warning-button{
	background-color: rgb(255, 154, 89);
	margin-top: 200px;
}
#green2-button{
	background-color: rgb(156, 204, 118);
	margin-top: 300px;
}
#problems-button{
	background-color: rgb(255, 89, 89);
	margin-top: 400px;
}
#green-button:hover {
    background-color: #4fc514; 
	color: #ffffff;
}

#warning-button:hover {
    background-color: #4fc514; 
	color: #ffffff;
}

#green2-button:hover {
    background-color: rgb(255, 96, 0); 
	color: #ffffff;
}
#problems-button:hover {
    background-color: rgb(214, 38, 38); 
	color: #ffffff;
}
#hist-btn{
	font-weight: bold;
	font-size: 25px;
	background-color: rgb(255, 96, 0);
	border: 3px solid black;
	box-shadow: 0 0 0 rgba(0, 0, 0, 0.3), 5px 5px 0 rgba(0, 0, 0, 0.3),
		-5px 5px 10px rgba(0, 0, 0, 0.3);
	border-radius: 25px;
	/* Rounded corners */
	padding: 15px 20px;
	cursor: pointer;
}
#hist-btn:hover {
    background-color: rgb(214, 38, 38); 
	color: #ffffff;
}
/* History Container */
.ht {
	background-color: rgb(255, 154, 89);
	font-weight: bolder;
	border-radius: 28px;
	padding: 10px 100px;
	position: fixed;
	text-align: center;	
	border: 2px solid black;
	box-shadow: 0 0 0 rgba(0, 0, 0, 0.3), 5px 5px 0 rgba(0, 0, 0, 0.3),
		-5px 5px 10px rgba(0, 0, 0, 0.3);
}
.ht2,
.ht3,
.ht4,
.ht5 {
	font-weight: bolder;
	border-radius: 18px;
	padding: 10px 0px;
	position: fixed;
	text-align: left;	
	margin-left: 10px;
}
/* ... */

